# rModelIO

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibs.cmake  LibCommon.cmake  LibInstall.cmake  LinkLibs.cmake  LinkTargets.cmake  Macros.cmake  rModelIOConfig (DESKTOP-0PP4OME's conflicted copy 2018-12-15).cmake  rModelIOConfig.cmake
deprecated/: AAMReader.cpp  AssetExporter.cpp  WRLExporter.h
include/: AAMReader.h  AssetExporter.h  AssetImporter.h  IDTFExporter.h  IOUtils.h  LASImporter.h  LaTeXExporter.h  LaTeXU3DInserter.h  OBJExporter.h  ObjModel2VCG.h  ObjModelExporter.h  ObjModelImporter.h  PDFGenerator.h  PLYExporter.h  U3DExporter.h  VCGTypes.h
include/deprecated/: VCGTypes.h
src/: AAMReader.cpp  AssetExporter.cpp  AssetImporter.cpp  IDTFExporter.cpp  IOUtils.cpp  LASImporter.cpp  LaTeXExporter.cpp  LaTeXU3DInserter.cpp  OBJExporter.cpp  ObjModel2VCG.cpp  ObjModelExporter.cpp  ObjModelImporter.cpp  PDFGenerator.cpp  PLYExporter.cpp  U3DExporter.cpp  WRLExporter.cpp
src/deprecated/: ObjModel2VCG.cpp
test/u3d/: CMakeLists.txt
test/u3d/doc/: main.tex  tcube.idtf  tcube.u3d
test/u3d/src/: main.cpp
